<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="like">Like</string>
    <string name="view">View</string>
    <string name="share">Share</string>
    <string name="count_of_shares">3</string>
    <string name="count_of_likes">34</string>
    <string name="count_of_views">423</string>
    <string name="author">Нетология. Университет интернет-профессий будущего</string>
    <string name="published">21 мая в 18:36</string>
    <string name="content">Привет, это новая Нетология! Когда-то Нетология начиналась с интенсивов по онлайн-маркетингу. Затем появились курсы по дизайну, разработке, аналитике и управлению. Мы растём сами и помогаем расти студентам: от новичков до уверенных профессионалов. Но самое важное остаётся с нами: мы верим, что в каждом уже есть сила, которая заставляет хотеть больше, целиться выше, бежать быстрее. Наша миссия — помочь встать на путь роста и начать цепочку перемен → http://netolo.gy/fyb</string>
</resources>
