<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_post"
    android:padding="@dimen/common_spacing"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragment.PostFragment">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/posts_avatar_size"
        android:layout_height="@dimen/posts_avatar_size"
        android:layout_marginBottom="@dimen/common_spacing"
        android:contentDescription="@string/description_post_author_avatar"
        app:layout_constraintBottom_toBottomOf="@id/barrier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/post_avatar_drawable" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text= "author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/common_spacing"
        app:layout_constraintTop_toBottomOf="@id/author"
        app:layout_constraintBottom_toBottomOf="@id/barrier"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        tools:text="published" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        style= "@style/Widget.AppTheme.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_spacing"
        android:contentDescription="@string/description_post_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:icon="@drawable/ic_more_vert_24" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,published,menu" />

    <ImageView
        android:id="@+id/video"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="@id/barrier"
        app:srcCompat="@drawable/outline_crop_square_24"
        app:tint="#FF0000"
        android:layout_marginTop="@dimen/common_spacing"
        android:contentDescription="@string/description_for_video"/>

    <ImageButton
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/play_24"
        app:layout_constraintTop_toTopOf="@+id/video"
        app:layout_constraintStart_toStartOf="@+id/video"
        app:layout_constraintEnd_toEndOf="@+id/video"
        app:layout_constraintBottom_toBottomOf="@+id/video"
        android:contentDescription="@string/description_for_play"/>

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="video,play"
        android:visibility="gone"/>


    <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:autoLink="web"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/video"
        tools:text="content" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/like"
        style="@style/Widget.AppTheme.LikeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/like"
        android:layout_marginTop="@dimen/common_spacing"
        android:checkable="true"
        app:layout_constraintTop_toBottomOf="@+id/content"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="5"
        tools:checked="true"
        app:icon="@drawable/ic_like_selector_24"/>


    <TextView
        android:id="@+id/count_of_views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content"
        tools:text="11"/>

    <ImageView
        android:id="@+id/views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/small_spacing"
        android:contentDescription="@string/view"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toStartOf="@+id/count_of_views"
        app:layout_constraintTop_toBottomOf="@+id/content"
        app:srcCompat="@drawable/ic_views_24dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/share"
        style ="@style/Widget.AppTheme.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/share"
        android:layout_marginTop="@dimen/common_spacing"
        android:layout_marginStart="@dimen/common_spacing"
        app:layout_constraintTop_toBottomOf="@+id/content"
        app:layout_constraintStart_toEndOf="@id/like"
        tools:text="1"
        app:icon="@drawable/ic_share_24dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>